--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,10 @@
   background: transparent;
   border: 2px solid orange;
 }
+.button:disabled{
+  background: silver;
+  pointer-events: none;
+}
 ::-webkit-scrollbar{
   display: none;
 }
