frontend_initial_commit

--- a/src/components/PostShare/PostShare.css
+++ b/src/components/PostShare/PostShare.css
@@ -10,6 +10,8 @@
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
+    object-fit: cover;
+    /* height: 4.5rem; */
 }
 .postOptions{
     display: flex; 
