--- a/src/components/FollowersCards/FollowersCard.css
+++ b/src/components/FollowersCards/FollowersCard.css
@@ -35,3 +35,10 @@
     padding-left: 20px;
     padding-right: 20px;
 }
+/* #fca61f */
+.UnfollowButton{
+    color: var(--orange);
+    border: 2px solid var(--orange);
+    cursor: pointer;
+    background: transparent;
+}
